11712406-project2/test/test_11712406_3.out
Error type 14 at Line 11: accessing with non-struct variable