11712406-project2/test/test_11712406_3.spl
int fibo(int n) {
    if (n < 2) {
        return n;
    }
    return fibo(n-1) + fibo(n-2);
}

int main() {
    int c = 100;
    int x = fibo(5) + fibo(25);
    return c.num + fibo(c + x);
}